refactor: reemplazar catálogos por consultas a BD y añadir entidades/repositories\n\n- Añade entidades JPA para tablas de catálogo (aeropuertos, puertos, monedas, ubigeo, unidades de medida, tipos de documento, tipos de nota, tipos de operación, tipo afectación IGV, códigos de tributo, documentos relacionados, motivos de traslado).\n- Crea repositorios Spring Data JPA correspondientes en package web.repositories.\n- Modifica CatalogController para usar repositorios (findAll) y mapear a CatalogItem, reemplazando endpoints que antes usaban enums.\n- Actualiza UbigeoRepository con JPQL correctos y reemplaza UbigeoController para usar el repository directamente.\n- Ajustes menores en application.yaml y eliminación de enums duplicados en core.catalogo que ya no se usan (se mantienen recursos ISO-4217).\n,workdir: